--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,24 @@
 {
   "name": "urlshortner",
   "version": "1.0.0",
+  "type": "module",
   "description": "server for url shortner application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "author": "kennedy",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "6.19.0",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "redis": "^5.10.0",
     "zod": "^4.1.12"
+  },
+  "devDependencies": {
+    "@types/node": "^24.10.1",
+    "prisma": "^6.19.0"
   }
 }
