--- a/server/vercel.json
+++ b/server/vercel.json
@@ -5,7 +5,7 @@
         
     ],
     "routes": [
-        { "src": "/api/(.*)", "dest": "/api/$1.ts" }
+        { "src": "/api/(.*)", "dest": "index.js" }
         
     ]
 }
